Heranca_Exercicios/pedido_livraria/saidaerro
[compare] Command to run:
javac Program.java; java Program
su student_jail -c 'timeout 30 bash -c '"'"'javac Program.java; java Program'"'"''
[compare] Return code: 1
[compare] Student stdout:
[compare] Student stdout length: 0
[compare] Student stderr:
Program.java:21: error: cannot find symbol
                ItemPedido[] itensPedido1 = new ItemPedido[] { new ItemPedido(livro1, 1), new ItemPedido(dvd2, 1) };
                ^
  symbol:   class ItemPedido
  location: class Program
Program.java:21: error: cannot find symbol
                ItemPedido[] itensPedido1 = new ItemPedido[] { new ItemPedido(livro1, 1), new ItemPedido(dvd2, 1) };
                                                ^
  symbol:   class ItemPedido
  location: class Program
Program.java:21: error: cannot find symbol
                ItemPedido[] itensPedido1 = new ItemPedido[] { new ItemPedido(livro1, 1), new ItemPedido(dvd2, 1) };
                                                                   ^
  symbol:   class ItemPedido
  location: class Program
Program.java:21: error: cannot find symbol
                ItemPedido[] itensPedido1 = new ItemPedido[] { new ItemPedido(livro1, 1), new ItemPedido(dvd2, 1) };
                                                                                              ^
  symbol:   class ItemPedido
  location: class Program
Program.java:23: error: cannot find symbol
                Pedido pedido1 = new Pedido(0, itensPedido1);
                ^
  symbol:   class Pedido
  location: class Program
Program.java:23: error: cannot find symbol
                Pedido pedido1 = new Pedido(0, itensPedido1);
                                     ^
  symbol:   class Pedido
  location: class Program
Program.java:28: error: cannot find symbol
                ItemPedido[] itensPedido2 = new ItemPedido[] { new ItemPedido(livro1, 1), new ItemPedido(dvd2, 1) };
                ^
  symbol:   class ItemPedido
  location: class Program
Program.java:28: error: cannot find symbol
                ItemPedido[] itensPedido2 = new ItemPedido[] { new ItemPedido(livro1, 1), new ItemPedido(dvd2, 1) };
                                                ^
  symbol:   class ItemPedido
  location: class Program
Program.java:28: error: cannot find symbol
                ItemPedido[] itensPedido2 = new ItemPedido[] { new ItemPedido(livro1, 1), new ItemPedido(dvd2, 1) };
                                                                   ^
  symbol:   class ItemPedido
  location: class Program
Program.java:28: error: cannot find symbol
                ItemPedido[] itensPedido2 = new ItemPedido[] { new ItemPedido(livro1, 1), new ItemPedido(dvd2, 1) };
                                                                                              ^
  symbol:   class ItemPedido
  location: class Program
Program.java:30: error: cannot find symbol
                Pedido pedido2 = new Pedido(10, itensPedido2);
                ^
  symbol:   class Pedido
  location: class Program
Program.java:30: error: cannot find symbol
                Pedido pedido2 = new Pedido(10, itensPedido2);
                                     ^
  symbol:   class Pedido
  location: class Program
Program.java:35: error: cannot find symbol
                ItemPedido[] itensPedido3 = new ItemPedido[] { new ItemPedido(livro2, 1), new ItemPedido(livro3, 2),
                ^
  symbol:   class ItemPedido
  location: class Program
Program.java:35: error: cannot find symbol
                ItemPedido[] itensPedido3 = new ItemPedido[] { new ItemPedido(livro2, 1), new ItemPedido(livro3, 2),
                                                ^
  symbol:   class ItemPedido
  location: class Program
Program.java:35: error: cannot find symbol
                ItemPedido[] itensPedido3 = new ItemPedido[] { new ItemPedido(livro2, 1), new ItemPedido(livro3, 2),
                                                                   ^
  symbol:   class ItemPedido
  location: class Program
Program.java:35: error: cannot find symbol
                ItemPedido[] itensPedido3 = new ItemPedido[] { new ItemPedido(livro2, 1), new ItemPedido(livro3, 2),
                                                                                              ^
  symbol:   class ItemPedido
  locat
...2424 more characters
[compare] Student stderr length: 6424
[compare] Desired stdout:
Total Pedido: 112,62
Total Pedido: 101,36
Total Pedido: 126,69
Total Pedido: 255,82
[compare] Desired stdout length: 84